fixing highlight node bug, adding curvature to nodes with multiple links for visibility

--- a/src/visg/static/css/main_style.css
+++ b/src/visg/static/css/main_style.css
@@ -52,7 +52,7 @@ div.dg.ac{
 #protein-info-container {
   font-family: 'Lucida Grande', sans-serif;
   width: 22rem; 
-  height: 80vh; 
+  height: 85vh; 
   z-index: 1000;
   display: flex;
   flex-direction: column;
